--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="sidebar-about">
         <a href="/">
           <h2>
-            Yaman Parasher
+            Arshpreet Singh
           </h2>
         </a>
       <p class="lead">
@@ -80,7 +80,7 @@
 
     <div class="content container">
       <div>
-    <img src="/projectmaterial/material/Yaman_Photo.jpg" alt="Avatar" class="header-img" />
+    <img src="/projectmaterial/material/Arsh_Photo.jpg" alt="Avatar" class="header-img" />
 </div>
 
 <h3 id="hey-there">Hey there, welcome to my personal portfolio website!</h3>
