--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 
     <div class="content container">
       <div>
-    <img src="/projectmaterial/material/Arsh_Photo.jpg" alt="Avatar" class="header-img" />
+    <img src="/projectmaterial/material/Arsh_Photo.jpeg" alt="Avatar" class="header-img" />
 </div>
 
 <h3 id="hey-there">Hey there, welcome to my personal portfolio website!</h3>
 
 <p style="text-align:justify"> My name is Arshpreet Singh and I am currently studying as a 10th grade student at Shiv Nadar School, Noida.</p>
-<p style="text-align:justify"> If you want to know more about me please refer to the <a href="/about/">About</a> section. The <a href="/blog/">Experience</a> section defines my journey through all the project and extra curricular activities I did over the past few years. All my <a href="/achievements/">Achievements</a>, have been complied up in the achievement section. And many of the projects that I’m working on (or not) are hosted on my <a href="https://github.com/parasheryaman19">Github repo</a>. You can find my research publications to date in the <a href="/publications/">Publications</a> section.</p>
+<p style="text-align:justify"> If you want to know more about me please refer to the <a href="/about/">About</a> section. The <a href="/blog/">Experience</a> section defines my journey through all the project and extra curricular activities I did over the past few years. All my <a href="/achievements/">Achievements</a>, have been complied up in the achievement section. And many of the projects that I’m working on (or not) are hosted on my <a href="https://github.com/arshpreetsingh824">Github repo</a>. You can find my research publications to date in the <a href="/publications/">Publications</a> section.</p>
 
   <!--  <p style="text-align:justify">I am always very interested to work in interdisciplinary areas related to optoelectronics, nano-photonics with an emphasis on silicon photonic integrated circuits (PICs).--> 
    
